--- a/README.org
+++ b/README.org
@@ -1,4 +1,4 @@
 #+TITLE: OOP-Proyecto 3
 
-Último mini-proyuecto de OOP.
+Último mini-proyecto de OOP.
 Simulación de un sistema de reservas para libros, software y otros materiales, con el objetivo de practicar clases en C++.
